# kaichat

./: .craft.ini  .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  ClangBuildAnalyzer.ini  README-RELEASE.md  README.md  REUSE.toml  config-kaichat.h.in  sanitizers.supp
src/: CMakeLists.txt  Messages.sh
src/apps/: CMakeLists.txt  kaichat.qrc  main.cpp
src/apps/autotests/: CMakeLists.txt
src/core/: CMakeLists.txt  kaichatadaptor.cpp  kaichatadaptor.h  kaichatcommandlineparser.cpp  kaichatcommandlineparser.h  kaichatcompletionlistmodel.cpp  kaichatcompletionlistmodel.h  kaichatexportchatasbasejob.cpp  kaichatexportchatasbasejob.h  kaichatexportchatasjsonjob.cpp  kaichatexportchatasjsonjob.h  kaichatexportchatasmardownjob.cpp  kaichatexportchatasmardownjob.h  kaichatexportchatasmarkdownjob.cpp  kaichatexportchatasmarkdownjob.h  kaichatexportchataspdfjob.cpp  kaichatexportchataspdfjob.h  kaichatexportchatastextjob.cpp  kaichatexportchatastextjob.h  kaichatexportchatjob.cpp  kaichatexportchatjob.h  kaichatimportchatjob.cpp  kaichatimportchatjob.h
src/core/autotests/: CMakeLists.txt  kaichatcommandlineparsertest.cpp  kaichatcommandlineparsertest.h  kaichatexportchatasbasejobtest.cpp  kaichatexportchatasbasejobtest.h  kaichatexportchatasjsonjobtest.cpp  kaichatexportchatasjsonjobtest.h  kaichatexportchatjobtest.cpp  kaichatexportchatjobtest.h  kaichatimportchatjobtest.cpp  kaichatimportchatjobtest.h
src/data/: kaichat.notifyrc  org.kde.kaichat.appdata.xml  org.kde.kaichat.desktop  org.kde.kaichat.desktop.license
src/kcm/: CMakeLists.txt  kcm_autogeneratetext.json  kcmautogeneratetext.cpp  kcmautogeneratetext.h
src/plugins/: CMakeLists.txt
src/plugins/text/: CMakeLists.txt
src/plugins/text/sharetext/: CMakeLists.txt  kaichat_sharetextplugin.json  purposemenuwidget.cpp  purposemenuwidget.h  sharetextinterface.cpp  sharetextinterface.h  sharetextplugin.cpp  sharetextplugin.h
src/plugins/text/webshortcut/: CMakeLists.txt  kaichat_webshortcuttextplugin.json  webshortcuttextinterface.cpp  webshortcuttextinterface.h  webshortcuttextplugin.cpp  webshortcuttextplugin.h
src/plugins/tools/: CMakeLists.txt
src/plugins/tools/currentdatetime/: CMakeLists.txt  currentdatetimetoolplugin.cpp  currentdatetimetoolplugin.h  currentdatetimetoolplugindialog.cpp  (+8 more)
src/widgets/: CMakeLists.txt  kaichatcentralwidget.cpp  kaichatcentralwidget.h  kaichatchangefontsizemenu.cpp  kaichatchangefontsizemenu.h  kaichatconfigureaccessibilitywidget.cpp  kaichatconfigureaccessibilitywidget.h  kaichatconfigurefontwidget.cpp  kaichatconfigurefontwidget.h  kaichatconfiguregeneralwidget.cpp  kaichatconfiguregeneralwidget.h  kaichatconfigureinstanceswidget.cpp  kaichatconfigureinstanceswidget.h  kaichatconfiguremcpserverswidget.cpp  kaichatconfiguremcpserverswidget.h  kaichatconfiguresettingsdialog.cpp  kaichatconfiguresettingsdialog.h  kaichatconfigurespellcheckingwidget.cpp  kaichatconfigurespellcheckingwidget.h  kaichatconfigureuserfeedbackwidget.cpp  kaichatconfigureuserfeedbackwidget.h  kaichatexportmenu.cpp  kaichatexportmenu.h  kaichatimportmenu.cpp  kaichatimportmenu.h  kaichatmainwindow.cpp  kaichatmainwindow.h  kaichatnotificatifieritem.cpp  kaichatnotificatifieritem.h  kaichatui.rc  kaichatutils.cpp  kaichatutils.h  kaichatwhatsnewtranslations.cpp  kaichatwhatsnewtranslations.h  kaichatwidgets.qrc  libkaichatwidgets_private_export.h  whatsnewtranslations.cpp  whatsnewtranslations.h
src/widgets/autotests/: CMakeLists.txt  kaichatdatabaseselectchatlineedittest.cpp  kaichatdatabaseselectchatlineedittest.h
src/widgets/configure/: kaichatconfigureaccessibilitywidget.h  kaichatconfigurefontwidget.cpp  kaichatconfigurefontwidget.h  kaichatconfiguregeneralwidget.cpp  kaichatconfigureinstanceswidget.cpp  kaichatconfiguremcpserverswidget.h  kaichatconfiguresettingsdialog.cpp  kaichatconfiguresettingsdialog.h  kaichatconfigurespellcheckingwidget.cpp  kaichatconfigurespellcheckingwidget.h  kaichatconfigureuserfeedbackwidget.cpp
src/widgets/databasedialog/: exploredatabasebasestoragewidget.cpp  exploredatabasebasestoragewidget.h  exploredatabasechatiddelegate.cpp  exploredatabasechatiddelegate.h  exploredatabasetooltipdelegate.cpp  exploredatabasetooltipdelegate.h  jsonplaintexteditwidget.cpp  jsonplaintexteditwidget.h  kaichatdatabasecbatpendingtypedinfowidget.cpp  kaichatdatabasecbatpendingtypedinfowidget.h  kaichatdatabasechatpendingtypedinfowidget.cpp  kaichatdatabasechatpendingtypedinfowidget.h  kaichatdatabasechatwidget.cpp  kaichatdatabasechatwidget.h  kaichatdatabasedialog.cpp  kaichatdatabasedialog.h  kaichatdatabasemessagejsonwidget.cpp  kaichatdatabasemessagejsonwidget.h  kaichatdatabasemessageslistview.cpp  kaichatdatabasemessageslistview.h  kaichatdatabasemessageswidget.cpp  kaichatdatabasemessageswidget.h  kaichatdatabaseselectchatlineedit.cpp  kaichatdatabaseselectchatlineedit.h  kaichatdatabaseselectchatwidget.cpp  kaichatdatabaseselectchatwidget.h  kaichatdatabasewidget.cpp  kaichatdatabasewidget.h
src/widgets/icons/: CMakeLists.txt
src/widgets/needupdateversion/: needupdatecheckexistingnewversionjob.cpp  needupdatecheckexistingnewversionjob.h  needupdateparsehtmljob.cpp  needupdateparsehtmljob.h  needupdateparsehtmlutil.h  needupdateversionutils.cpp  needupdateversionutils.h  needupdateversionwidget.cpp  needupdateversionwidget.h
src/widgets/settings/: kaichatglobalconfig.kcfg  kaichatglobalconfig.kcfgc
src/widgets/userfeedback/: accountinfosource.cpp  accountinfosource.h  kaichatuserfeedbackprovider.cpp  kaichatuserfeedbackprovider.h  userfeedbackmanager.cpp  userfeedbackmanager.h
src/widgets/verifynewversionwidget/: verifynewversiondialog.cpp  verifynewversiondialog.h  verifynewversionwidget.cpp  verifynewversionwidget.h  verifynewversionwidgetaction.cpp  verifynewversionwidgetaction.h
src/widgets/whatsnew/: whatsnewcomboboxwidget.h  whatsnewdialog.h  whatsnewinfo.cpp  whatsnewinfo.h  whatsnewmessagewidget.h  whatsnewtranslations.cpp  whatsnewtranslations.h  whatsnewwidget.cpp  whatsnewwidget.h
(+36 files in other folders)
